--- a/index.html
+++ b/index.html
@@ -107,6 +107,23 @@
 
           </fieldset>
 
+          <fieldset class="gardian">
+            <legend>Informações do responsável</legend>
+            <div class="input-wrapper">
+              <label for="gardian">Nome do responsável</label>
+              <input type="text" name="gardian" id="gardian">
+              <small>Principal responsável legal e contato de emergência</small>
+            </div>
+
+            <div class="input-wrapper">
+              <label for="phone">Telefone</label>
+              <input type="tel" name="phone" id="phone" pattern="\(?\d{2}\)?\s?\d{4,5}-?\d{4}" maxlength="15">
+              
+            </div>
+
+
+          </fieldset>
+
 
         </form>
 
@@ -126,6 +143,33 @@
       </div>
     </aside>
   </div>
+
+<script>
+  document.getElementById('phone').addEventListener('input', function(event) {
+    let value = event.target.value;
+
+    value = value.replace(/\D/g, '');
+
+    if (value.length <= 2) {
+      value = `(${value}`;
+    } 
+    else if (value.length <= 6) {
+      value = `(${value.slice(0, 2)}) ${value.slice(2)}`;
+    } 
+    else if (value.length <= 10) {
+      value = `(${value.slice(0, 2)}) ${value.slice(2, 6)}-${value.slice(6)}`;
+    } 
+    else {
+      value = `(${value.slice(0, 2)}) ${value.slice(2, 7)}-${value.slice(7, 11)}`;
+    }
+
+    event.target.value = value;
+
+    if (value.length > 15) {
+      event.target.value = value.slice(0, 15);
+    }
+  });
+</script>
   
 </body>
 </html>
